处理servel filter问题